Animated containers overlap fix

--- a/src/styles/AnimatedContainer.module.scss
+++ b/src/styles/AnimatedContainer.module.scss
@@ -10,6 +10,11 @@ $position: 40px;
 	opacity: 0;
 	transition-timing-function: $transition-ease;
 	transition-property: opacity, transform;
+	z-index: 0;
+}
+
+.container.show {
+	z-index: 1;
 }
 
 .fast {
